javali_tests/OwnTestCases/InherDiffRetType.javali.err
Debug information for file: javali_tests/OwnTestCases/InherDiffRetType.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Foo, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: foo, returnType: int)
| | Seq ()
| | | VarDecl (name: i, type: int)
| | Seq ()
| | | ReturnStmt ()
| | | | Var (name: i)
ClassDecl (name: Bar, superClass: Foo)
| MethodDecl (argumentNames: [], argumentTypes: [], name: foo, returnType: boolean)
| | Seq ()
| | | VarDecl (name: b, type: boolean)
| | Seq ()
| | | ReturnStmt ()
| | | | Var (name: b)
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | Seq ()
Error message from reference is: Overridden method foo has return type boolean,but its superclass has int

Phase semantic failed because we expected to see:
INVALID_OVERRIDE
But we actually saw:
OK
The difference is:
At line   1 /   1:
< INVALID_OVERRIDE
> OK

