javali_tests/OwnTestCases/InherDiffRetType.javali
class Foo {
    int foo() {
        int i;
        return i;
    }
}

class Bar extends Foo {
    boolean foo() {
        boolean b;
        return b;
    }
}

class Main {
    void main() {
    }
}